--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Site da ShayShay
-description: Architect is a theme for GitHub Pages.
+title: Shayenne Moura
+description: Computer Music Researcher.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-architect
